--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand"><a href="#page-top">sommaire</a></li>
                 <li class="sidebar-nav-item"><a href="#page-top">Accueil</a></li>
-                <li class="sidebar-nav-item"><a href="#about">à propos</a></li>bg-masthead
+                <li class="sidebar-nav-item"><a href="#about">à propos</a></li>
                 <li class="sidebar-nav-item"><a href="#services">competences</a></li>
                 <li class="sidebar-nav-item"><a href="#portfolio">projets</a></li>
                 <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
