--- a/index.html
+++ b/index.html
@@ -142,7 +142,12 @@
                         <a class="social-link rounded-circle text-white" href="https://github.com/DesmaraisAmbre/DesmaraisAmbre/tree/main"><i class="icon-social-github"></i></a>
                     </li>
                 </ul>
-                <p class="text-muted small mb-0">© 2025 — Réalisation : Ambre • Assistance : ChatGPT</p>
+                <footer class="footer text-center">
+                  <p class="text-muted small mb-0">
+                    © Ambre Desmarais – 2025 |
+                    <a href="mentions.html">Mentions légales & crédits</a>
+              </p>
+            </footer><p class="text-muted small mb-0">© 2025 — Réalisation : Ambre • Assistance : ChatGPT</p>
             </div>
         </footer>
         <!-- Scroll to Top Button-->
