Refactor footer HTML structure and content

--- a/index.html
+++ b/index.html
@@ -143,11 +143,8 @@
                     </li>
                 </ul>
                 <footer class="footer text-center">
-                  <p class="text-muted small mb-0">
-                    © Ambre Desmarais – 2025 |
-                    <a href="mentions.html">Mentions légales & crédits</a>
-              </p>
-            </footer><p class="text-muted small mb-0">© 2025 — Réalisation : Ambre • Assistance : ChatGPT</p>
+                  <p class="text-muted small mb-0">© Ambre Desmarais – 2025 |<a href="mentions.html">Mentions légales & crédits</a></p>
+                </footer>
             </div>
         </footer>
         <!-- Scroll to Top Button-->
