Add CV section to index.html
Added CV section with educational background, skills, experiences, languages, interests, and personal qualities.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,66 @@
                 </div>
             </div>
         </section>
+        <!-- CV -->
+        <section class="content-section bg-light" id="cv">
+            <div class="container px-4 px-lg-5">
+                <div class="content-section-heading text-center">
+                    <h2 class="mb-5">CV</h2>
+                </div>
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-lg-10">
+
+                        <h4>Formation</h4>
+                        <p>
+                            <strong>Terminale STI2D</strong> (Sciences et Technologies de l’Industrie et du Développement Durable)<br>
+                            Lycée Gustave Eiffel – Armentières (2024 – 2025)<br>
+                            Spécialité : Innovation technologique et développement durable<br>
+                            Projets réalisés : mini-serre automatisée, développement web, application connectée via ESP32
+                        </p>
+
+                        <h4>Compétences</h4>
+                        <p>
+                            Informatique : Python, HTML, PHP, MySQL, CMS, mise en page de documents<br>
+                            Bureautique : Pack Office (Word, Excel, PowerPoint)<br>
+                            Organisation : Capacité à gérer des projets en autonomie ou en groupe<br>
+                            Communication : Sérieuse, courtoise, à l’écoute
+                        </p>
+
+                        <h4>Expériences / Projets</h4>
+                        <p>
+                            <strong>Mini-projet : Site Web interactif (2025)</strong><br>
+                            Création d’un site web avec base de données MySQL<br>
+                            Mise en ligne d’une interface de suivi pour mini-serre connectée<br>
+                            Présentation orale d’un projet scientifique devant un jury
+                        </p>
+                        <p>
+                            <strong>Journée d’immersion universitaire – BUT Réseaux et Télécommunications (2024)</strong><br>
+                            Découverte du fonctionnement d’une formation post-bac<br>
+                            Participation à des ateliers pratiques et rencontres avec des étudiants
+                        </p>
+
+                        <h4>Langues</h4>
+                        <p>
+                            Français : langue maternelle<br>
+                            Anglais : niveau B1 – compréhension et expression écrite/orale
+                        </p>
+
+                        <h4>Centres d’intérêt</h4>
+                        <p>
+                            Technologies numériques et communication<br>
+                            Engagement écologique et agriculture urbaine (projet de mini-serre)<br>
+                            Astronomie, jeux vidéo de gestion, univers fantastiques et collaboratifs
+                        </p>
+
+                        <h4>Qualités personnelles</h4>
+                        <p>
+                            Sérieuse – Motivée – Autonome – Adaptable – Bon esprit d’équipe
+                        </p>
+
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Portfolio-->
         <section class="content-section" id="portfolio">
             <div class="container px-4 px-lg-5">
