Add CV link to sidebar navigation

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li class="sidebar-nav-item"><a href="#page-top">Accueil</a></li>
                 <li class="sidebar-nav-item"><a href="#about">à propos</a></li>
                 <li class="sidebar-nav-item"><a href="#services">compétences</a></li>
+                <li class="sidebar-nav-item"><a href="#cv">CV</a></li>
                 <li class="sidebar-nav-item"><a href="#portfolio">projets</a></li>
                 <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
             </ul>
