Remove comments and clean up HTML structure

--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Ambre Desmarais - portfolio</title>
-        <!-- Favicon-->
+
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Simple line icons-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css" rel="stylesheet" />
-        <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
+
     <body id="page-top">
+
         <!-- Navigation-->
         <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
         <nav id="sidebar-wrapper">
@@ -31,6 +29,7 @@
                 <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
+
         <!-- Header-->
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
@@ -39,6 +38,7 @@
                 <a class="btn btn-primary btn-xl" href="#about">à propos de moi</a>
             </div>
         </header>
+
         <!-- About-->
         <section class="content-section bg-light" id="about">
             <div class="container px-4 px-lg-5 text-center">
@@ -46,13 +46,14 @@
                     <div class="col-lg-10">
                         <h2>ce qui m'anime</h2>
                         <p>
-                             Curieuse et créative, j'aime concevoir des projets qui ont du sens et imaginer des solutions techniques à impact positif.
+                            Curieuse et créative, j'aime concevoir des projets qui ont du sens et imaginer des solutions techniques à impact positif.
                         </p>
                         <a class="btn btn-dark btn-xl" href="#services">Mes compétences</a>
                     </div>
                 </div>
             </div>
         </section>
+
         <!-- Services-->
         <section class="content-section bg-primary text-white text-center" id="services">
             <div class="container px-4 px-lg-5">
@@ -84,6 +85,7 @@
                 </div>
             </div>
         </section>
+
         <!-- CV -->
         <section class="content-section bg-light" id="cv">
             <div class="container px-4 px-lg-5">
@@ -95,7 +97,7 @@
 
                         <h4>Formation</h4>
                         <p>
-                            <strong>Terminale STI2D</strong> (Sciences et Technologies de l’Industrie et du Développement Durable)<br>
+                            <strong>Terminale STI2D</strong><br>
                             Lycée Gustave Eiffel – Armentières (2024 – 2025)<br>
                             Spécialité : Innovation technologique et développement durable<br>
                             Projets réalisés : mini-serre automatisée, développement web, application connectée via ESP32
@@ -116,6 +118,7 @@
                             Mise en ligne d’une interface de suivi pour mini-serre connectée<br>
                             Présentation orale d’un projet scientifique devant un jury
                         </p>
+
                         <p>
                             <strong>Journée d’immersion universitaire – BUT Réseaux et Télécommunications (2024)</strong><br>
                             Découverte du fonctionnement d’une formation post-bac<br>
@@ -125,14 +128,14 @@
                         <h4>Langues</h4>
                         <p>
                             Français : langue maternelle<br>
-                            Anglais : niveau B1 – compréhension et expression écrite/orale
+                            Anglais : niveau B1
                         </p>
 
                         <h4>Centres d’intérêt</h4>
                         <p>
                             Technologies numériques et communication<br>
-                            Engagement écologique et agriculture urbaine (projet de mini-serre)<br>
-                            Astronomie, jeux vidéo de gestion, univers fantastiques et collaboratifs
+                            Engagement écologique et agriculture urbaine<br>
+                            Astronomie, jeux vidéo de gestion, univers fantastiques
                         </p>
 
                         <h4>Qualités personnelles</h4>
@@ -144,6 +147,7 @@
                 </div>
             </div>
         </section>
+
         <!-- Portfolio-->
         <section class="content-section" id="portfolio">
             <div class="container px-4 px-lg-5">
@@ -153,64 +157,45 @@
                 <div class="row gx-0">
                     <div class="col-lg-6">
                         <a class="portfolio-item" href="#!">
-                            <div class="caption">
-                                <div class="caption-content">
-                                    <div class="h2">Mini serre</div>
-                                </div>
-                            </div>
                             <img class="img-fluid" src="assets/img/projet mini-serre.PNG" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
                         <a class="portfolio-item" href="#!">
-                            <div class="caption">
-                                <div class="caption-content">
-                                    <div class="h2">Capteur cradiaque</div>
-                                </div>
-                            </div>
                             <img class="img-fluid" src="assets/img/projet cc.png" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
                         <a class="portfolio-item" href="#!">
-                            <div class="caption">
-                                <div class="caption-content">
-                                    <div class="h2">Mbot</div>
-                                </div>
-                            </div>
                             <img class="img-fluid" src="assets/img/projet Mbot.png" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
                         <a class="portfolio-item" href="#!">
-                            <div class="caption">
-                                <div class="caption-content">
-                                    <div class="h2">drone</div>
-                                </div>
-                            </div>
-                            <img class="img-fluid" src="assets/img/projet drone.png
-                            " alt="..." />
+                            <img class="img-fluid" src="assets/img/projet drone.png" alt="..." />
                         </a>
                     </div>
                 </div>
             </div>
         </section>
+
         <!-- Footer-->
         <footer class="footer text-center">
             <div class="container px-4 px-lg-5">
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white" href="https://github.com/DesmaraisAmbre/DesmaraisAmbre/tree/main"><i class="icon-social-github"></i></a>
+                        <a class="social-link rounded-circle text-white" href="https://github.com/DesmaraisAmbre/DesmaraisAmbre/tree/main">
+                            <i class="icon-social-github"></i>
+                        </a>
                     </li>
                 </ul>
-                <footer class="footer text-center">
-                  <p class="text-muted small mb-0">© Ambre Desmarais – 2025 |<a href="mentions.html">Mentions légales & crédits</a></p>
-                </footer>
+                <p class="text-muted small mb-0">© Ambre Desmarais – 2025 | <a href="mentions.html">Mentions légales & crédits</a></p>
             </div>
         </footer>
-        <!-- Scroll to Top Button-->
+
         <a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
-        <!-- Bootstrap core JS-->
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+    </body>
+</html>
