Update navigation and portfolio sections in index.html

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <li class="sidebar-brand"><a href="#page-top">sommaire</a></li>
                 <li class="sidebar-nav-item"><a href="#page-top">Accueil</a></li>
                 <li class="sidebar-nav-item"><a href="#about">à propos</a></li>
-                <li class="sidebar-nav-item"><a href="#services">compétences</a></li>
+                <li class="sidebar-nav-item"><a href="#services">projets</a></li>
                 <li class="sidebar-nav-item"><a href="#cv">CV</a></li>
-                <li class="sidebar-nav-item"><a href="#portfolio">projets</a></li>
+                <li class="sidebar-nav-item"><a href="#portfolio">portfolio</a></li>
                 <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -97,15 +97,15 @@
 
                         <h4>Formation</h4>
                         <p>
-                            <strong>Terminale STI2D</strong><br>
-                            Lycée Gustave Eiffel – Armentières (2024 – 2025)<br>
-                            Spécialité : Innovation technologique et développement durable<br>
-                            Projets réalisés : mini-serre automatisée, développement web, application connectée via ESP32
+                            <strong>BUT réseaux informatique et télécommunications</strong><br>
+                            IUT de Béthune – Béthune (2025 – 2026)<br>
+                            Spécialité : réseaux informatique et télécommunications<br>
+                            Projets réalisés : mini-serre automatisée, développement web, application connectée
                         </p>
 
                         <h4>Compétences</h4>
                         <p>
-                            Informatique : Python, HTML, PHP, MySQL, CMS, mise en page de documents<br>
+                            Informatique : Python, HTML, PHP, MySQL, mise en page de documents<br>
                             Bureautique : Pack Office (Word, Excel, PowerPoint)<br>
                             Organisation : Capacité à gérer des projets en autonomie ou en groupe<br>
                             Communication : Sérieuse, courtoise, à l’écoute
@@ -131,13 +131,6 @@
                             Anglais : niveau B1
                         </p>
 
-                        <h4>Centres d’intérêt</h4>
-                        <p>
-                            Technologies numériques et communication<br>
-                            Engagement écologique et agriculture urbaine<br>
-                            Astronomie, jeux vidéo de gestion, univers fantastiques
-                        </p>
-
                         <h4>Qualités personnelles</h4>
                         <p>
                             Sérieuse – Motivée – Autonome – Adaptable – Bon esprit d’équipe
@@ -148,41 +141,79 @@
             </div>
         </section>
 
-        <!-- Portfolio-->
+        <!-- Portfolio -->
         <section class="content-section" id="portfolio">
-            <div class="container px-4 px-lg-5">
-                <div class="content-section-heading text-center">
-                    <h2 class="mb-5">Projets</h2>
-                </div>
-                <div class="row gx-0">
-                    <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
-                            <img class="img-fluid" src="assets/img/projet mini-serre.PNG" alt="..." />
-                        </a>
+          <div class="container px-4 px-lg-5">
+               <div class="content-section-heading text-center">
+                 <h2 class="mb-5">Portfolio de compétences</h2>
+              </div>
+
+               <div class="row gx-0">
+
+                  <div class="col-lg-6">
+                       <a class="portfolio-item" href="administrer.html">
+                         <div class="caption">
+                                <div class="caption-content">
+                                    <div class="h2">Administrer</div>
+                                    <p class="mb-0">Gérer et maintenir des systèmes informatiques</p>
+                                </div>
+                         </div>
+                           <img class="img-fluid" src="assets/img/administrer.png" alt="Administrer" />
+                       </a>
+                  </div>
+
+                  <div class="col-lg-6">
+                      <a class="portfolio-item" href="connecter.html">
+                          <div class="caption">
+                              <div class="caption-content">
+                                  <div class="h2">Connecter</div>
+                                  <p class="mb-0">Mettre en réseau des équipements</p>
+                              </div>
+                          </div>
+                          <img class="img-fluid" src="assets/img/connecter.png" alt="Connecter" />
+                      </a>
+                  </div>
+
+            <div class="col-lg-6">
+                <a class="portfolio-item" href="programmer.html">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <div class="h2">Programmer</div>
+                            <p class="mb-0">Développer des solutions logicielles</p>
+                        </div>
                     </div>
-                    <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
-                            <img class="img-fluid" src="assets/img/projet cc.png" alt="..." />
-                        </a>
-                    </div>
-                    <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
-                            <img class="img-fluid" src="assets/img/projet Mbot.png" alt="..." />
-                        </a>
-                    </div>
-                    <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
-                            <img class="img-fluid" src="assets/img/projet mini-serre.PNG" alt="..." />
-                        </a>
-                    </div>
-                    <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
-                            <img class="img-fluid" src="assets/img/projet drone.png" alt="..." />
-                        </a>
-                    </div>
-                </div>
+                    <img class="img-fluid" src="assets/img/programmer.png" alt="Programmer" />
+                </a>
             </div>
-        </section>
+
+            <div class="col-lg-6">
+                <a class="portfolio-item" href="securiser.html">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <div class="h2">Sécuriser</div>
+                            <p class="mb-0">Protéger les systèmes et les données</p>
+                        </div>
+                    </div>
+                    <img class="img-fluid" src="assets/img/securiser.png" alt="Sécuriser" />
+                </a>
+            </div>
+
+            <div class="col-lg-6 mx-auto">
+                <a class="portfolio-item" href="surveiller.html">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <div class="h2">Surveiller</div>
+                            <p class="mb-0">Contrôler l’état d’un réseau</p>
+                        </div>
+                    </div>
+                    <img class="img-fluid" src="assets/img/surveiller.png" alt="Surveiller" />
+                </a>
+            </div>
+
+        </div>
+    </div>
+</section>
+
 
         <!-- Footer-->
         <footer class="footer text-center">
