--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </div>
 
             <div class="col-lg-6">
-                <a class="portfolio-item" href="securiser.html">
+                <a class="portfolio-item" href="sécuriser.html">
                     <div class="caption">
                         <div class="caption-content">
                             <div class="h2">Sécuriser</div>
