Change image format from PNG to JPG

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                     <p class="mb-0">Gérer et maintenir des systèmes informatiques</p>
                                 </div>
                          </div>
-                           <img class="img-fluid" src="assets/img/administrer.png" alt="Administrer" />
+                           <img class="img-fluid" src="assets/img/administrer.jpg" alt="Administrer" />
                        </a>
                   </div>
 
