Enhance legal mentions with credits and links
Added links to the Bootstrap template and image sources.

--- a/mentions.html
+++ b/mentions.html
@@ -9,8 +9,18 @@ du BUT Réseaux & Télécommunications.
 
 <h3>Crédits</h3>
 <ul>
-  <li>Template Bootstrap : Stylish Portfolio</li>
+  <li>
+    Template Bootstrap :
+    <a href="https://startbootstrap.com/theme/stylish-portfolio" target="_blank">
+      Stylish Portfolio
+    </a>
+  </li>
   <li>CSS : Bootstrap</li>
   <li>Icônes : Font Awesome</li>
-  <li>Images : personnelles</li>
+  <li>
+    Images : Images générées par IA
+    (<a href="https://chatgpt.com/" target="_blank">ChatGPT</a>),
+    Images importées sur FREEPIK
+    (<a href="https://fr.freepik.com/" target="_blank">Freepik</a>)
+  </li>
 </ul>
