Correct text capitalization and spelling in index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand"><a href="#page-top">Sommaire</a></li>
                 <li class="sidebar-nav-item"><a href="#page-top">Accueil</a></li>
-                <li class="sidebar-nav-item"><a href="#about">à propos</a></li>
+                <li class="sidebar-nav-item"><a href="#about">À propos</a></li>
                 <li class="sidebar-nav-item"><a href="#services">Projets</a></li>
                 <li class="sidebar-nav-item"><a href="#cv">CV</a></li>
                 <li class="sidebar-nav-item"><a href="#portfolio">Portfolio</a></li>
@@ -34,7 +34,7 @@
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
                 <h1 class="mb-1">Accueil</h1>
-                <h3 class="mb-5"><em>Desmarais Ambre, étudiante en réseaux informatique et télécommunications</em></h3>
+                <h3 class="mb-5"><em>Desmarais Ambre, étudiante en BUT réseaux informatiques et télécommunications</em></h3>
                 <a class="btn btn-primary btn-xl" href="#about">à propos de moi</a>
             </div>
         </header>
@@ -74,13 +74,13 @@
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="fas fa-seedling"></i></span>
-                        <h4><strong>mini serre</strong></h4>
-                        <p class="text-faded mb-0">Prise en compte des problemes de demain, travail d'équipe</p>
-                    </div>
+                        <h4><strong>Mini serre</strong></h4>
+                        <p class="text-faded mb-0">Prise en compte des problèmes de demain, travail d'équipe</p>
+                    </div>p
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="fas fa-heartbeat"></i></span>
                         <h4><strong>capteur cardiaque</strong></h4>
-                        <p class="text-faded mb-0">Découverte des capacités des capteurs sur le corp humain</p>
+                        <p class="text-faded mb-0">Découverte des capacités des capteurs sur le corps humain</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="fas fa-microchip"></i></span>
@@ -90,7 +90,7 @@
                     <div class="col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="fas fa-helicopter"></i></span>
                         <h4><strong>drone</strong></h4>
-                        <p class="text-faded mb-0">Initiation aux logiciels comme quantt, SolidWorks, MIT app inventor</p>
+                        <p class="text-faded mb-0">Initiation aux logiciels comme QuantT, SolidWorks, MIT App Inventor</p>
                     </div>
                 </div>
             </div>
@@ -197,7 +197,7 @@
             </div>
 
             <div class="col-lg-6">
-                <a class="portfolio-item" href="sécuriser.html">
+                <a class="portfolio-item" href="securiser.html">
                     <div class="caption">
                         <div class="caption-content">
                             <div class="h2">Sécuriser</div>
@@ -245,3 +245,4 @@
         <script src="js/scripts.js"></script>
     </body>
 </html>
+
