Add educational details to index.html

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 
                         <h4>Formation</h4>
                         <p>
+                            <strong>BAC STI2D - Systèmes d'Information et Numérique mention assez bien</strong><br>
                             <strong>BUT réseaux informatique et télécommunications</strong><br>
                             IUT de Béthune – Béthune (2025 – 2026)<br>
                             Spécialité : réseaux informatique et télécommunications<br>
